--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 </head>
 
 <body>
+  <script async src="https://ga.jspm.io/npm:es-module-shims@1.7.0/dist/es-module-shims.js"></script>
+
   <script type="importmap">
     {
       "imports": {
         "three": "https://unpkg.com/three@latest/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@latest/examples/jsm/"
+        "OrbitControls": "https://unpkg.com/three@latest/examples/jsm/controls/OrbitControls.js"
       }
     }
   </script>
 
   <script type="module">
-    import * as THREE from 'https://unpkg.com/three/build/three.module.js';
-    import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+    import * as THREE from 'three';
+    import { OrbitControls } from 'OrbitControls';
     import metrics from './metrics.js'
 
     // Setup
