--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
     }
   </script>
 
+  <script id="vertexShader" type="x-shader/x-vertex">
+    void main() {
+      gl_Position = projectionMatrix * modelViewMatrix * vec4(position.x, position.y, position.z, 1.0);
+    }
+  </script>
+  <script id="fragmentShader" type="x-shader/x-fragment">
+    void main() {
+      gl_FragColor = vec4(1.0, 0.58, 0.86, 1.0);
+    }
+  </script>
+
   <script type="module">
     import * as THREE from 'three';
     import { OrbitControls } from 'OrbitControls';
@@ -32,25 +43,51 @@
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
 
-    const renderer = new THREE.WebGLRenderer();
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio)
     document.body.appendChild(renderer.domElement);
 
     const controls = new OrbitControls(camera, renderer.domElement);
     const texture = new THREE.TextureLoader().load('textures/2k_sun.jpeg');
-    const stars_texture = new THREE.TextureLoader().load('textures/2k_stars.jpeg');
     const earth_texture = new THREE.TextureLoader().load('textures/2k_earth_daymap.jpeg');
 
     // Add stars environment map
-    const stars_geometry = new THREE.SphereGeometry(500)
-    const stars_material = new THREE.MeshBasicMaterial({ map: stars_texture });
-    stars_material.side = THREE.DoubleSide
-    const stars = new THREE.Mesh(stars_geometry, stars_material);
-    scene.add(stars)
+    const starsGeometry = new THREE.BufferGeometry()
+    const starsGeometry2 = new THREE.BufferGeometry()
+    const vertices = []
+    const vertices2 = []
+    for (let i = 0; i < 4000; i++) {
+      const phi = Math.random() * (Math.PI);
+      const theta = Math.random() * (Math.PI * 2);
+      const spread = (Math.random() - 0.5) * 50
+
+      const s = new THREE.Spherical(250 + spread, phi, theta)
+      const vec3 = new THREE.Vector3().setFromSpherical(s)
+
+      const x = vec3.x
+      const y = vec3.y
+      const z = vec3.z
+
+      vertices.push(x, y, z);
+      vertices2.push(y, z, x);
+    }
+    console.log(vertices.length);
+    starsGeometry.setAttribute('position', new THREE.Float32BufferAttribute(vertices, 3))
+    starsGeometry2.setAttribute('position', new THREE.Float32BufferAttribute(vertices2, 3))
+    const starMaterial = new THREE.PointsMaterial({ color: '#999999' })
+    const starMaterial2 = new THREE.PointsMaterial({ color: '#333333' })
+    const starsMesh = new THREE.Points(starsGeometry, starMaterial)
+    const starsMesh2 = new THREE.Points(starsGeometry2, starMaterial2)
+    scene.add(starsMesh)
+    scene.add(starsMesh2)
 
     // Add sun
     const geometry = new THREE.SphereGeometry(2)
-    const material = new THREE.MeshBasicMaterial({ map: texture });
+    const material = new THREE.ShaderMaterial({
+      vertexShader: document.getElementById("vertexShader").textContent,
+      fragmentShader: document.getElementById("fragmentShader").textContent,
+    });
     const cube = new THREE.Mesh(geometry, material);
     scene.add(cube);
 
@@ -102,11 +139,11 @@
         calc[planetKey].angle += 0.03 / calc[planetKey].radius
         // Camera loked to Earth
         if (planetKey === "Earth") {
-          const planetOffset = calc[planetKey].ref.position.clone().multiplyScalar(1.4)
-          camera.position.x = planetOffset.x;
-          camera.position.z = planetOffset.z;
+          //const planetOffset = calc[planetKey].ref.position.clone().multiplyScalar(1.4)
+          //camera.position.x = planetOffset.x;
+          //camera.position.z = planetOffset.z;
           //controls.target = calc[planetKey].ref.position;
-          controls.update();
+          //controls.update();
         }
       })
       renderer.render(scene, camera);
