--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </script>
   <script id="fragmentShader" type="x-shader/x-fragment">
     void main() {
-      gl_FragColor = vec4(1.0, 0.58, 0.86, 1.0);
+      gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
     }
   </script>
 
@@ -38,6 +38,11 @@
     import * as THREE from 'three';
     import { OrbitControls } from 'OrbitControls';
     import metrics from './metrics.js'
+
+    const normalizePlanetSize = (value) => {
+      const smallest = 2440, biggest = 69911 - 2440;
+      return (value - smallest) / biggest
+    }
 
     // Setup
     const scene = new THREE.Scene();
@@ -57,7 +62,7 @@
     const starsGeometry2 = new THREE.BufferGeometry()
     const vertices = []
     const vertices2 = []
-    for (let i = 0; i < 4000; i++) {
+    for (let i = 0; i < 2000; i++) {
       const phi = Math.random() * (Math.PI);
       const theta = Math.random() * (Math.PI * 2);
       const spread = (Math.random() - 0.5) * 50
@@ -72,11 +77,11 @@
       vertices.push(x, y, z);
       vertices2.push(y, z, x);
     }
-    console.log(vertices.length);
+    
     starsGeometry.setAttribute('position', new THREE.Float32BufferAttribute(vertices, 3))
     starsGeometry2.setAttribute('position', new THREE.Float32BufferAttribute(vertices2, 3))
-    const starMaterial = new THREE.PointsMaterial({ color: '#999999' })
-    const starMaterial2 = new THREE.PointsMaterial({ color: '#333333' })
+    const starMaterial = new THREE.PointsMaterial({ color: '#cccccc' })
+    const starMaterial2 = new THREE.PointsMaterial({ color: '#666666' })
     const starsMesh = new THREE.Points(starsGeometry, starMaterial)
     const starsMesh2 = new THREE.Points(starsGeometry2, starMaterial2)
     scene.add(starsMesh)
@@ -93,23 +98,23 @@
 
     // Add light
     const light = new THREE.PointLight(0xffffff);
-    light.position.set(0, 155, 0);
+    light.position.set(0, 0, 0);
     scene.add(light);
 
     const calc = {}
 
     // Add Planets
     const lineMaterial = new THREE.LineBasicMaterial({ color: 0x444444 });
-    var segmentCount = 64;
+    var segmentCount = 128;
     let unitCirclePoints = [];
-    for (var i = 0; i <= 64; i++) {
-      var theta = (i / 64) * Math.PI * 2;
+    for (var i = 0; i <= segmentCount; i++) {
+      var theta = (i / segmentCount) * Math.PI * 2;
       unitCirclePoints.push(new THREE.Vector3(Math.cos(theta), 0, Math.sin(theta)));
     }
 
     Object.keys(metrics).forEach((planetKey, i) => {
       const planetTexture = new THREE.TextureLoader().load('textures/' + metrics[planetKey].texture);
-      const geometry = new THREE.SphereGeometry(1)
+      const geometry = new THREE.SphereGeometry(.75 + (normalizePlanetSize(metrics[planetKey].radius) * 2))
       const material = new THREE.MeshLambertMaterial({ map: planetTexture });
       const planet = new THREE.Mesh(geometry, material);
       scene.add(planet);
@@ -120,35 +125,42 @@
         ref: planet
       }
       planet.position.x = radius
-      planet.position.z = radius
+      planet.rotation.z = 23.5 * ((Math.PI / 2) / 360) // Test: Earth Axis tilt
       const orbitGeometry = new THREE.BufferGeometry().setFromPoints(unitCirclePoints.map(x => x.clone().multiplyScalar(radius)));
       const line = new THREE.Line(orbitGeometry, lineMaterial);
       scene.add(line);
     })
 
-    //camera.position.z = 55;
-    camera.position.y = 125;
+    camera.position.z = 35;
+    camera.position.y = 40;
     controls.update();
 
+    const clock = new THREE.Clock()
+
     // Render
+    const speedFactor = 100000
     function animate() {
+      let delta = clock.getDelta()
+
       requestAnimationFrame(animate);
       Object.keys(metrics).forEach((planetKey, i) => {
         calc[planetKey].ref.position.x = Math.cos(calc[planetKey].angle) * calc[planetKey].radius
         calc[planetKey].ref.position.z = Math.sin(calc[planetKey].angle) * calc[planetKey].radius
-        calc[planetKey].angle += 0.03 / calc[planetKey].radius
+        calc[planetKey].angle += (delta) * (metrics[planetKey].angularVelocityAroundSunInSec) * (speedFactor)
+        if (planetKey === "Earth")
+          calc[planetKey].ref.rotation.y += (delta) * (metrics[planetKey].angularVelocityAroundSunInSec * 365) * (speedFactor)
         // Camera loked to Earth
-        if (planetKey === "Earth") {
           //const planetOffset = calc[planetKey].ref.position.clone().multiplyScalar(1.4)
           //camera.position.x = planetOffset.x;
           //camera.position.z = planetOffset.z;
           //controls.target = calc[planetKey].ref.position;
           //controls.update();
-        }
       })
       renderer.render(scene, camera);
     }
     animate();
+
+   
 
   </script>
 </body>
