--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     const controls = new OrbitControls(camera, renderer.domElement);
     const texture = new THREE.TextureLoader().load('textures/2k_sun.jpeg');
     const earth_texture = new THREE.TextureLoader().load('textures/2k_earth_daymap.jpeg');
+    const earth_normal_texture = new THREE.TextureLoader().load('textures/2k_earth_normal_map.png');
+    const earth_specular_texture = new THREE.TextureLoader().load('textures/2k_earth_specular_map.png');
 
     // Add stars environment map
     const starsGeometry = new THREE.BufferGeometry()
@@ -114,11 +116,15 @@
 
     Object.keys(metrics).forEach((planetKey, i) => {
       const planetTexture = new THREE.TextureLoader().load('textures/' + metrics[planetKey].texture);
-      const geometry = new THREE.SphereGeometry(.75 + (normalizePlanetSize(metrics[planetKey].radius) * 2))
-      const material = new THREE.MeshLambertMaterial({ map: planetTexture });
+      const geometry = new THREE.SphereGeometry(.25 + (normalizePlanetSize(metrics[planetKey].radius) * 10), 64, 64)
+      const material = new THREE.MeshStandardMaterial({ 
+        map: planetTexture,
+        normalMap: planetKey === "Earth" ? earth_normal_texture : null,
+        roughnessMap: planetKey === "Earth" ? earth_specular_texture : null
+       });
       const planet = new THREE.Mesh(geometry, material);
       scene.add(planet);
-      const radius = (i + 1) * 5
+      const radius = (i + 1) * 15
       calc[planetKey] = {
         angle: Math.random() * (Math.PI * 2),
         radius: radius,
@@ -138,7 +144,7 @@
     const clock = new THREE.Clock()
 
     // Render
-    const speedFactor = 100000
+    const speedFactor = 1000
     function animate() {
       let delta = clock.getDelta()
 
@@ -147,8 +153,11 @@
         calc[planetKey].ref.position.x = Math.cos(calc[planetKey].angle) * calc[planetKey].radius
         calc[planetKey].ref.position.z = Math.sin(calc[planetKey].angle) * calc[planetKey].radius
         calc[planetKey].angle += (delta) * (metrics[planetKey].angularVelocityAroundSunInSec) * (speedFactor)
-        if (planetKey === "Earth")
+        if (planetKey === "Earth"){
           calc[planetKey].ref.rotation.y += (delta) * (metrics[planetKey].angularVelocityAroundSunInSec * 365) * (speedFactor)
+          controls.target = calc[planetKey].ref.position;
+          controls.update();
+        }
         // Camera loked to Earth
           //const planetOffset = calc[planetKey].ref.position.clone().multiplyScalar(1.4)
           //camera.position.x = planetOffset.x;
