--- a/scenes/planet/index.html
+++ b/scenes/planet/index.html
@@ -113,9 +113,9 @@
     scene.add(planetMesh)
 
     // Stars
-    const blueStars = makeStars(2450, 500, '#4444bb')
-    const redStars = makeStars(2450, 500, '#aa4444')
-    const whiteStars = makeStars(150, 1000, '#aaaaaa')
+    const blueStars = makeStars(245, 150, '#4444bb')
+    const redStars = makeStars(245, 150, '#aa4444')
+    const whiteStars = makeStars(150, 300, '#777')
     scene.add(blueStars)
     scene.add(redStars)
     scene.add(whiteStars)
