--- a/scenes/planet/index.html
+++ b/scenes/planet/index.html
@@ -29,7 +29,10 @@
     varying vec3 v_position;
     varying vec3 v_normal;
     varying vec3 v_light;
+    varying vec2 v_uv;
+
     void main() {
+      v_uv = uv;
       vec4 n = vec4(normalMatrix * normal, 1.0) * modelViewMatrix;
       vec4 l = vec4(normalMatrix * u_light_pos, 1.0) * modelViewMatrix;
       v_light = normalize(l.xyz);
@@ -43,9 +46,21 @@
     varying vec3 v_position;
     varying vec3 v_normal;
     varying vec3 v_light;
+    varying vec2 v_uv;
+    uniform sampler2D u_albedo_map;
+    uniform sampler2D u_specular_map;
+    uniform sampler2D u_clouds_map;
+    uniform sampler2D u_night_map;
 
     void main() {
-      gl_FragColor = vec4(vec3(dot(v_normal, v_light)), 1.0);
+      vec3 albedo = texture2D(u_albedo_map, v_uv).xyz;
+      vec3 specular = texture2D(u_albedo_map, v_uv).xyz;
+      vec3 clouds = texture2D(u_clouds_map, v_uv).xyz;
+      vec3 night = texture2D(u_night_map, v_uv).xyz;
+
+      float brightness = dot(v_light, v_normal);
+
+      gl_FragColor = vec4(((clouds + albedo) * brightness) + (night * -brightness), 1.0);
     }
   </script>
 
@@ -79,7 +94,7 @@
     // Setup
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 2000);
-    camera.position.x = 10
+    camera.position.x = 3
 
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
@@ -99,7 +114,10 @@
 
     const uniforms = {
       u_light_pos: new THREE.Uniform(pointLight.position),
-      u_albedo_map: new THREE.TextureLoader().load('../../textures/2k_earth_daymap.jpeg')
+      u_albedo_map: new THREE.Uniform(new THREE.TextureLoader().load('../../textures/2k_earth_daymap.jpeg')),
+      u_specular_map: new THREE.Uniform(new THREE.TextureLoader().load('../../textures/2k_earth_specular_map.jpeg')),
+      u_clouds_map: new THREE.Uniform(new THREE.TextureLoader().load('../../textures/2k_earth_clouds.jpeg')),
+      u_night_map: new THREE.Uniform(new THREE.TextureLoader().load('../../textures/2k_earth_nightmap.jpeg')),
     }
 
     // Planet
@@ -113,7 +131,7 @@
     scene.add(planetMesh)
 
     // Stars
-    const blueStars = makeStars(245, 150, '#4444bb')
+    const blueStars = makeStars(200, 150, '#4444bb')
     const redStars = makeStars(245, 150, '#aa4444')
     const whiteStars = makeStars(150, 300, '#777')
     scene.add(blueStars)
